--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ kaleido==0.2.1
 pillow==10.1.0
 
 # LLM & NLP
-llama-cpp-python==0.2.20
+google-generativeai==0.3.0
 wordcloud==1.9.3
 
 # PDF & Reporting
