--- a/auto_eda_chatbot/requirements.txt
+++ b/auto_eda_chatbot/requirements.txt
@@ -1,13 +1,9 @@
 streamlit
 pandas
 numpy
+python-dotenv
 matplotlib
 seaborn
-scikit-learn
-google-generativeai
-wordcloud
 plotly
-scipy
-openai
-python-dotenv
 fpdf
+openpyxl
